fix: bleed out's, gas, and airdrops trigger kill modal

--- a/client/src/scss/pages/client/game.scss
+++ b/client/src/scss/pages/client/game.scss
@@ -882,7 +882,7 @@
         }
     }
 
-    #kill-msg-player-name {
+    #kill-msg-cont .kill-msg-player-name {
         font-weight: bold;
         color: $orange;
         @include text-shadow;
